2007-06-24  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: HTML5 revision 923 (matching end tag in CDATA
	or RCDATA in fragment parsing mode).  HTML5 revision 
	924 (<!--> and <!--->).  HTML5 revision 926 (hn in hn).

2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (get_inner_html): HTML5 revision 922 (inner_html
	for <pre> and <textarea>).

2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: HTML5 revision 920 (<isindex>).

2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: HTML5 revision 918 (</head>, </body>, </html>).

2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: HTML5 revision 916 (</body>).
	HTML5 revision 917 (conforming bare &).

2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* NanoDOM.pm (manakai_is_html): Setting to false did not work.

	* HTML.pm.src: HTML5 revision 914 (</ in CDATA, RCDATA).
	HTML5 revision 915 (<nobr>).

2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: HTML5 revisions 908, 909, 912, and 913 (quirks mode).
	
	* NanoDOM.pm (manakai_is_html, manakai_compat_mode, compat_mode):
	New attributes.

2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: HTML5 revisions 900, 901, 902, and 911 (<
	in tags).

2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* .cvsignore: |Entities.html| is added.

	* HTML.pm.src: |$entity_char| is removed and 
	requires |Whatpm::_NamedEntityList| instead.
	HTML5 revision 898 (refc), except that lack of refc
	is parse error.

	* mkentitylist.pl: New script.

	* Makefile (all): |_NamedEntityList.pm| is added.
	(_NamedEntityList.pm, Entities.html): New rules.

2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Parse errors immediately after U+000D
	were ignored and U+000D immediately following another
	U+000D was not converted to U+000A.

2007-06-23  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (set_inner_html): HTML5 revision 892 (adopt
	nodes before appended).  Parser was not ready for NULL
	parse error and escape flag.

	* NanoDOM.pm (adopt_node): New.
