@@ -1,6 +1,6 @@
 package Whatpm::HTML;
 use strict;
-our $VERSION=do{my @r=(q$Revision: 1.23 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+our $VERSION=do{my @r=(q$Revision: 1.24 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 
 ## ISSUE:
 ## var doc = implementation.createDocument (null, null, null);
@@ -2434,11 +2434,11 @@ sub _tree_construction_main ($) {
       } elsif ({
                 base => 1, link => 1, meta => 1,
                }->{$token->{tag_name}}) {
-        !!!parse-error (type => 'in body:'.$token->{tag_name});
         ## NOTE: This is an "as if in head" code clone
         my $el;
         !!!create-element ($el, $token->{tag_name}, $token->{attributes});
-        if (defined $self->{head_element}) {
+        if ($self->{insertion_mode} eq 'in head' and
+            defined $self->{head_element}) {
           $self->{head_element}->append_child ($el);
         } else {
           $insert->($el);
@@ -3415,8 +3415,12 @@ sub _tree_construction_main ($) {
               ## NOTE: There are "as if in head" code clones
               my $el;
               !!!create-element ($el, $token->{tag_name}, $token->{attributes});
-              (defined $self->{head_element} ? $self->{head_element} : $self->{open_elements}->[-1]->[0])
-                ->append_child ($el);
+              if ($self->{insertion_mode} eq 'in head' and
+                  defined $self->{head_element}) {
+                $self->{head_element}->append_child ($el);
+              } else {
+                $self->{open_elements}->[-1]->[0]->append_child ($el);
+              }
 
               !!!next-token;
               redo B;
@@ -5383,4 +5387,4 @@ sub get_inner_html ($$$) {
 } # get_inner_html
 
 1;
-# $Date: 2007/06/23 16:01:36 $
+# $Date: 2007/06/23 16:42:43 $
