@@ -496,13 +496,13 @@ p {color: green}
 
 #data
 <section xmlns="http://www.w3.org/1999/xhtml">
-<style type="text/css"/>
+<style type="text/css" scoped=""/>
 </section>
 #errors
 
 #data
 <section xmlns="http://www.w3.org/1999/xhtml">
-<style type="text/css"/>
+<style type="text/css" scoped=""/>
 <p/>
 </section>
 #errors
@@ -510,14 +510,14 @@ p {color: green}
 #data
 <section xmlns="http://www.w3.org/1999/xhtml">
 <p/>
-<style type="text/css"/>
+<style type="text/css" scoped=""/>
 </section>
 #errors
 /section/style;element not allowed
 
 #data
 <section xmlns="http://www.w3.org/1999/xhtml">
-<style type="text/css"/>
+<style type="text/css" scoped=""/>
 <b/>
 </section>
 #errors
@@ -526,7 +526,7 @@ p {color: green}
 #data
 <section xmlns="http://www.w3.org/1999/xhtml">
 <b/>
-<style type="text/css"/>
+<style type="text/css" scoped=""/>
 </section>
 #errors
 /section/b;element not allowed
@@ -534,27 +534,27 @@ p {color: green}
 
 #data
 <section xmlns="http://www.w3.org/1999/xhtml">
-<style type="text/css"/>a</section>
+<style type="text/css" scoped=""/>a</section>
 #errors
 /section/"a";character not allowed
 
 #data
-<section xmlns="http://www.w3.org/1999/xhtml">a<style type="text/css"/>
+<section xmlns="http://www.w3.org/1999/xhtml">a<style type="text/css" scoped=""/>
 </section>
 #errors
 /section/"a";character not allowed
 
 #data
 <section xmlns="http://www.w3.org/1999/xhtml">
-<style type="text/css"/>
-<style type="text/css"/>
+<style type="text/css" scoped=""/>
+<style type="text/css" scoped=""/>
 <p/>
 </section>
 #errors
 
 #data
 <section xmlns="http://www.w3.org/1999/xhtml">
-<style type="text/css"/>
+<style type="text/css" scoped=""/>
 <p/><p/>
 </section>
 #errors
