@@ -1,7 +1,7 @@
 1..780
 # Running under perl version 5.008007 for linux
-# Current time local: Sun Jun 24 00:56:34 2007
-# Current time GMT:   Sat Jun 23 15:56:34 2007
+# Current time local: Sun Jun 24 01:40:50 2007
+# Current time GMT:   Sat Jun 23 16:40:50 2007
 # Using Test.pm version 1.25
 ok 1
 ok 2
