@@ -1,5 +1,15 @@
 2007-06-24  Wakaba  <wakaba@suika.fam.cx>
 
+	* tree-test-1.dat: Some test results are changed
+	since <base>, <link>, and <meta> in body
+	are no longer appended to the head element pointer (HTML5
+	revision 935).
+
+	* content-model-2.dat: Tests for |scoped|
+	attribute are added (HTML5 revision 938).
+
+2007-06-24  Wakaba  <wakaba@suika.fam.cx>
+
 	* tree-test-1.dat: Tests for CDATA/RCDATA innerHTML
 	with matching end tag are added (HTML5 revision 923).
 	A test for h2 in h1 is added (HTML5 revision 926).
