@@ -1,5 +1,12 @@
 2007-06-24  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm.src: HTML5 revision 935 (<base>, <link>, <meta>
+	in body).
+
+	* ContentChecker.pm: HTML5 revision 938 (scoped="").
+
+2007-06-24  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML.pm.src: HTML5 revision 923 (matching end tag in CDATA
 	or RCDATA in fragment parsing mode).  HTML5 revision 
 	924 (<!--> and <!--->).  HTML5 revision 926 (hn in hn).
